include/dss_capi.h

    /*
    Set Stepsize in Hr
    */
    DSS_CAPI_DLL void Solution_Set_StepsizeHr(double Value);
    /*
    Set Stepsize in minutes
    */
    DSS_CAPI_DLL void Solution_Set_StepsizeMin(double Value);
    /*
    Value of the control iteration counter
    */
    DSS_CAPI_DLL int32_t Solution_Get_ControlIterations(void);
    /*
    Maximum allowable control iterations
    */
    DSS_CAPI_DLL int32_t Solution_Get_MaxControlIterations(void);
    DSS_CAPI_DLL void Solution_Sample_DoControlActions(void);
    /*
    Value of the control iteration counter
    */
    DSS_CAPI_DLL void Solution_Set_ControlIterations(int32_t Value);
    /*
    Maximum allowable control iterations
    */
    DSS_CAPI_DLL void Solution_Set_MaxControlIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_CheckFaultStatus(void);
    DSS_CAPI_DLL void Solution_SolveDirect(void);
    DSS_CAPI_DLL void Solution_SolveNoControl(void);
    DSS_CAPI_DLL void Solution_SolvePflow(void);
    DSS_CAPI_DLL void Solution_SolvePlusControl(void);
    DSS_CAPI_DLL void Solution_SolveSnap(void);
    DSS_CAPI_DLL void Solution_CheckControls(void);
    DSS_CAPI_DLL void Solution_InitSnap(void);
    /*
    Flag that indicates if elements of the System Y have been changed by recent activity.
    */
    DSS_CAPI_DLL uint16_t Solution_Get_SystemYChanged(void);
    DSS_CAPI_DLL void Solution_BuildYMatrix(int32_t BuildOption, int32_t AllocateVI);
    DSS_CAPI_DLL void Solution_DoControlActions(void);
    DSS_CAPI_DLL void Solution_SampleControlDevices(void);
    /*
    Flag to indicate whether the circuit solution converged
    */
    DSS_CAPI_DLL uint16_t Solution_Get_Converged(void);
    /*
    Flag to indicate whether the circuit solution converged
    */
    DSS_CAPI_DLL void Solution_Set_Converged(uint16_t Value);
    /*
    Total iterations including control iterations for most recent solution.
    */
    DSS_CAPI_DLL int32_t Solution_Get_Totaliterations(void);
    /*
    Max number of iterations required to converge at any control iteration of the most recent solution.
    */
    DSS_CAPI_DLL int32_t Solution_Get_MostIterationsDone(void);
    /*
    Flag indicating the control actions are done.
    */
    DSS_CAPI_DLL uint16_t Solution_Get_ControlActionsDone(void);
    DSS_CAPI_DLL void Solution_Set_ControlActionsDone(uint16_t Value);
    DSS_CAPI_DLL void Solution_Cleanup(void);
    DSS_CAPI_DLL void Solution_FinishTimeStep(void);
    /*
    Gets the time required to perform the latest solution (Read only)
    */
    DSS_CAPI_DLL double Solution_Get_Process_Time(void);
    /*
    Gets the accumulated time of the simulation
    */
    DSS_CAPI_DLL double Solution_Get_Total_Time(void);
    /*
    Sets the Accumulated time of the simulation
    */
    DSS_CAPI_DLL void Solution_Set_Total_Time(double Value);
    /*
    Get the solution process time + sample time for time step
    */
    DSS_CAPI_DLL double Solution_Get_Time_of_Step(void);
    /*
    Get/Set the Solution.IntervalHrs variable used for devices that integrate
    */
    DSS_CAPI_DLL double Solution_Get_IntervalHrs(void);
    /*
    Get/Set the Solution.IntervalHrs variable for custom solution algorithms
    */
    DSS_CAPI_DLL void Solution_Set_IntervalHrs(double Value);
    /*
    Minimum number of iterations required for a power flow solution.
    */
    DSS_CAPI_DLL int32_t Solution_Get_MinIterations(void);
    /*
    Mininum number of iterations required for a power flow solution.
    */
    DSS_CAPI_DLL void Solution_Set_MinIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_SolveAll(void);
    DSS_CAPI_DLL void Solution_Get_Laplacian(int32_t** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_Laplacian but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_Laplacian_GR(void);